--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cedarville Cursive">
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ambay Mall Online Boutique</title>
+    <title>Online Boutique</title>
   </head>
   <body>
     <div id="root"></div>
